TODO
* add file stream support
  - what about non-CRT WINAPI version ?
  - implement libcfile_stream_open_wide
* validate WINAPI versions of fallback functions
* add fallback versions of
  - CreateFileA
  - CreateFileW
  - CloseHandle
  - ReadFile
  - WriteFile
  - GetFileAttributesA
  - GetFileAttributesW
  - GetLastError
* add libcfile_codepage.h and codepage functions
* add msvscpp, borlandc5 and codegear files
* improve tests ?
  - add write when opened with read ?
* what about disk full on write errno = ENOSPC

Notes:
* WINAPI ReadFile
  When the file is UNBUFFERED it appears that nNumberOfBytesToRead must be a
  multiple of sector size. Any other value will result in error 0x57
  (ERROR_INVALID_PARAMETER).

20120904
* applied updates

20120903
* change for WINAPI

20120825
* applied updates

20120630
* applied updates

20120624
* fixed typo in error output

20120610
* Changes for WINAPI

20120526
* added tests for stream
* updated man page
* added file stream get size function

20120524
* worked on file stream support
* code clean up

20120523
* worked on file stream support

20120507
* email and project site change

20120425
* fixes for pkg-config detection of libraries

20120409
* updated dependencies

20120408
* updated dependencies

20120407
* updated dependencies

20120406
* merged with libbfio file code
* worked on tests

20120405
* merged with libbfio file code
* worked on include header

20120403
* Worked on stand-alone version
